feat(analytics): Add analytics tracking script

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QR code generator</title>
+    <script defer src="https://analytics.esportsapp.gg/script.js" data-website-id="9a25c3f4-bac5-4a94-b22d-8b0c0ebb2f77"></script>
   </head>
   <body>
     <div id="root"></div>
